--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.1",
+    "html2pdf.js": "^0.10.1",
+    "htmltopdf-weasyprint": "^1.0.8",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-code-blocks": "^0.1.3",
@@ -15,7 +17,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "set PORT=3008 && react-scripts start",
+    "start": "set PORT=3009 && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
